--- a/theme/c2c.css
+++ b/theme/c2c.css
@@ -228,3 +228,7 @@ body {
   -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
 }
+
+.reveal pre code {
+  text-align: left;
+}
