--- a/theme/c2c.css
+++ b/theme/c2c.css
@@ -119,6 +119,10 @@ body {
   font-weight: 300;
 }
 
+.reveal .big {
+  font-size: 2.5em;
+}
+
 /*********************************************
  * LINKS
  *********************************************/
@@ -229,6 +233,24 @@ body {
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
 }
 
+/*********************************************
+ * MISC
+ *********************************************/
+
 .reveal pre code {
   text-align: left;
+}
+
+.reveal ul {
+  text-align: left;
+}
+
+.reveal li {
+  margin-left: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.reveal .fat {
+  font-weight: bold;
 }
